# BlackHoleSim

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  README.md  fragment_core_antiguo.glsl
shaders/: blur.glsl  fragment_core.glsl  fragment_screen.glsl  raytracing.glsl  vertex_core.glsl
src/: main.cpp
